--- a/finance_backend/requirements.txt
+++ b/finance_backend/requirements.txt
@@ -42,3 +42,8 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+# Added for authentication (password hashing and JWT)
+passlib[bcrypt]
+python-jose[cryptography]
+# Added for PostgreSQL driver
+psycopg[binary]
