--- a/finance_backend/.env.example
+++ b/finance_backend/.env.example
@@ -1,6 +1,10 @@
-# Copy to .env and set values as needed
-# For SQLite (default), this can be omitted:
+# Backend environment variables
+# DATABASE_URL=postgresql+psycopg://user:password@localhost:5432/finance_db
+# For local development you may use SQLite (already defaulted in code):
 # DATABASE_URL=sqlite:///./finance.db
 
-# For Postgres example:
-# DATABASE_URL=postgresql+psycopg2://user:password@host:5432/finance
+# Authentication / JWT
+# Strongly recommended to set a secure random secret in production
+JWT_SECRET=please_change_this_in_production
+JWT_ALGORITHM=HS256
+JWT_EXPIRE_MINUTES=60
